fix wave blocking login on small screens

--- a/src/styles/scss/components/landing-page.scss
+++ b/src/styles/scss/components/landing-page.scss
@@ -9,7 +9,7 @@
     justify-content: center;
     position: relative;
     min-height: 90vh;
-    max-height: 100vh;
+    max-height: 200vh;
     padding-bottom: 15rem;
     // padding-top: 7rem;
 
